Accessibility fixes - Links rely on color to be distinguishable. bolder texts for links (<a> font-weight changed.) - Touch targets do not have sufficient size or spacing. larger spaces between   En  <->  Jp  <-> Pt <->  Fr - Heading elements are not in a sequentially-descending order. h1 -> h2 -> h3 in order.

--- a/assets/_scss/default/nav/lang-switch.scss
+++ b/assets/_scss/default/nav/lang-switch.scss
@@ -36,6 +36,8 @@
 
 .lang-switch li {
   display: inline-block;
+  margin-left: 4px;
+  margin-right: 4px;
 }
 
 .lang-switch ul {
